--- a/debezium-server-postgres-pubsub/conf/application.properties
+++ b/debezium-server-postgres-pubsub/conf/application.properties
@@ -1,5 +1,5 @@
 debezium.sink.type=pubsub
-debezium.sink.pubsub.project.id=project-id
+debezium.sink.pubsub.project.id=data-engineering-230006
 debezium.source.connector.class=io.debezium.connector.postgresql.PostgresConnector
 debezium.source.offset.storage.file.filename=data/offsets.dat
 debezium.source.offset.flush.interval.ms=0
@@ -11,3 +11,5 @@ debezium.source.database.dbname=postgres
 debezium.source.topic.prefix=tutorial
 debezium.source.table.include.list=inventory.customers
 debezium.source.plugin.name=pgoutput
+#debezium.tombstones.on.delete=false
+debezium.source.tombstones.on.delete=false
