--- a/debezium-server-postgres-pubsub/docker-compose.yml
+++ b/debezium-server-postgres-pubsub/docker-compose.yml
@@ -1,20 +1,20 @@
 version: '3.9'
 services:
   postgres:
-    image: quay.io/debezium/example-postgres:${DEBEZIUM_VERSION}
+    image: quay.io/debezium/example-postgres:2.2.0.Final
     container_name: postgres
     ports:
      - 5432:5432
     environment:
      - POSTGRES_USER=postgres
      - POSTGRES_PASSWORD=postgres
-  debezium-server:
-    image: quay.io/debezium/server:${DEBEZIUM_VERSION}
-    container_name: debezium-server
-    environment:
-      GOOGLE_APPLICATION_CREDENTIALS: /tmp/credentials/service-account.json
-    ports:
-      - "8080:8080"
-    volumes:
-      - /your/path/to/service-account.json:/tmp/credentials/service-account.json
-      - ./conf:/debezium/conf
+#  debezium-server:
+#    image: quay.io/debezium/server:2.2.0.Final
+#    container_name: debezium-server
+#    environment:
+#      GOOGLE_APPLICATION_CREDENTIALS: /tmp/credentials/service-account.json
+#    ports:
+#      - "8080:8080"
+#    volumes:
+#      - /Users/lamhoang/Data/documents/TS/trusting_social/document/gcp-datawarehouse/data-engineering-230006-2410a14b7ab1.json:/tmp/credentials/service-account.json
+#      - ./conf:/debezium/conf
